using System;

namespace StockProphetLib
{
    interface IArticleHandler
    {
        void Run(object article);
    }
}